--- a/Week3/arraylist.html
+++ b/Week3/arraylist.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
-    <title>Document</title>
+    <title>Array List</title>
 </head>
 <body>
-    
+   <script src="arraylist.js"></script>
 </body>
 </html>
