--- a/Week4/calculator/calculator.html
+++ b/Week4/calculator/calculator.html
@@ -7,13 +7,11 @@
     </style>
 </head>
 <body>
-    <script src="calculator.js"></script>
     <div>
         <h1>Addition Function</h1>
-        <input type="number" id="first">
-        <input type="number" id="second">
+        <input type="number" id="first" >
+        <input type="number" id="second" >
         <button id="add">Add!</button>
-        <p id="answer">Answer</p>
     </div>
 
     <div>
@@ -21,7 +19,6 @@
         <input type="number" id="Here">
         <input type="number" id="There">
         <button id="sub">Subtract!</button>
-        <p id="solution">Answer</p>
     </div>
 
     <div>
@@ -29,7 +26,8 @@
         <input type="number" id="one">
         <input type="number" id="two">
         <button id="mul">Multiply!</button>
-        <p id="success">Answer</p>
     </div>
+    <h1 id="result">Results</h1>
+    <script src="calculator.js"></script>
 </body>
 </html>
