--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -8,13 +8,13 @@
     <h1>Jiffy Airlines</h1>
     <form id="form2" name="form2">
         <label for="fname">First Name:</label>
-        <input type="text" id="fname" name="fname" value="First"><br>
+        <input type="text" id="fname" name="fname" ><br>
 
         <label for="lname">First Name:</label>
-        <input type="text" id="lname" name="lname" value="Last"><br>
+        <input type="text" id="lname" name="lname" ><br>
 
         <label for="age">Age:</label>
-        <input type="number" id="age" name="age" value="18"><br>
+        <input type="number" id="age" name="age" ><br>
 
         <label for="news">Sign up for our monthly Newsletter?</label>
         <input type="radio" id="yes" name="news" value="Yes">
