--- a/Week5/submit_events/Elementsvalue.html
+++ b/Week5/submit_events/Elementsvalue.html
@@ -6,11 +6,11 @@
 <body>
     <form id="form">
         <label for="fname">First Name:</label><br>
-        <input type="text" id="fname" name="fname" value="First"><br>
+        <input type="text" id="fname" name="fname" ><br>
         <label for="lname">Last Name:</label><br>
-        <input type="text" id="lname" name="lname" value="Last"><br>
+        <input type="text" id="lname" name="lname" ><br>
         <label for="email">Email Address:</label><br>
-        <input type="email" id="email" name="email" value="address@email.com"><br>
+        <input type="email" id="email" name="email" ><br>
         <input type="button" id="Submit" value="Submit">
     </form>
     <script src="Elementsvalue.js"></script>
