--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -23,15 +23,15 @@
         <label for="no">No</label> <br>
 
         <label for="Destination">Destination:</label>
-        <input type="select" id="Paris" name="Destination" value="Paris">
+        <input type="select" id="Paris" name="Destination" >
             <label for="Paris">Paris</label>
-        <input type="select" id="London" name="Destination" value="London">
+        <input type="select" id="London" name="Destination" >
             <label for="London">London</label>
-        <input type="select" id="Denali" name="Destination" value="Denali">
+        <input type="select" id="Denali" name="Destination">
             <label for="Denali">Denali</label>
-        <input type="select" id="Rome" name="Destination" value="Rome">
+        <input type="select" id="Rome" name="Destination" >
             <label for="Rome">Rome</label>
-        <input type="select" id="Athens" name="Destination" value="Athens">
+        <input type="select" id="Athens" name="Destination">
             <label for="Athens">Athens</label> <br>
 
         <label for="allergies">Allergies:</label>
