Options/Select box

--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -23,16 +23,12 @@
         <label for="no">No</label> <br>
 
         <label for="Destination">Destination:</label>
-        <input type="select" id="Paris" name="Destination" >
-            <label for="Paris">Paris</label>
-        <input type="select" id="London" name="Destination" >
-            <label for="London">London</label>
-        <input type="select" id="Denali" name="Destination">
-            <label for="Denali">Denali</label>
-        <input type="select" id="Rome" name="Destination" >
-            <label for="Rome">Rome</label>
-        <input type="select" id="Athens" name="Destination">
-            <label for="Athens">Athens</label> <br>
+        <select name="Destination" id="Destination>
+            <option value="Paris">Paris</option>
+            <option value="London">London</option>
+            <option value="Denali">Denali</option>
+            <option value="Rome">Rome</option>
+            <option value="Athens">Athens</option> <br>
 
         <label for="allergies">Allergies:</label>
         <input type="checkbox" id="Lactose-Free" name="allergies" value="Lactose-Free">
