--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -23,15 +23,15 @@
         <label for="no">No</label> <br>
 
         <label for="Destination">Destination:</label>
-        <select name="Destination" id="Destination>
+        <select name="Destination" id="Destination">
             <option value="Paris">Paris</option>
             <option value="London">London</option>
             <option value="Denali">Denali</option>
             <option value="Rome">Rome</option>
             <option value="Athens">Athens</option> 
-         </select> <br>
+         </select>
 
-        <label for="allergies">Allergies:</label>
+        <br> <label for="allergies">Allergies:</label>
         <input type="checkbox" id="Lactose-Free" name="allergies" value="Lactose-Free">
         <label for="Lactose-Free">Lactose-Free</label>
         <input type="checkbox" id="Gluten-Free" name="allergies" value="Gluten-Free">
