--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -28,10 +28,10 @@
             <option value="London">London</option>
             <option value="Denali">Denali</option>
             <option value="Rome">Rome</option>
-            <option value="Athens">Athens</option> 
+            <option value="Athens">Athens</option> <br>
          </select>
 
-        <br> <label for="allergies">Allergies:</label>
+        <label for="allergies">Allergies:</label>
         <input type="checkbox" id="Lactose-Free" name="allergies" value="Lactose-Free">
         <label for="Lactose-Free">Lactose-Free</label>
         <input type="checkbox" id="Gluten-Free" name="allergies" value="Gluten-Free">
