--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -28,8 +28,8 @@
             <option value="London">London</option>
             <option value="Denali">Denali</option>
             <option value="Rome">Rome</option>
-            <option value="Athens">Athens</option> <br>
-         </select>
+            <option value="Athens">Athens</option>
+         </select> <br>
 
         <label for="allergies">Allergies:</label>
         <input type="checkbox" id="Lactose-Free" name="allergies" value="Lactose-Free">
