--- a/Week5/Forms2/forms2.html
+++ b/Week5/Forms2/forms2.html
@@ -10,7 +10,7 @@
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname" ><br>
 
-        <label for="lname">First Name:</label>
+        <label for="lname">Last Name:</label>
         <input type="text" id="lname" name="lname" ><br>
 
         <label for="age">Age:</label>
