--- a/Week7/index.html
+++ b/Week7/index.html
@@ -10,16 +10,12 @@
 <div id="centerme">
     <form id="form">
 
-    <input type="text" id="todo1" name="todo1" ><br>
+    <input type="text" id="todo1" name="todo1" >
     <input type="text" id="todo2" name="todo2"><br>
-    <input type="text" id="todo3" name="todo3" ><br>
-    <input type="text" id="todo4" name="todo4" ><br>
-    <input type="text" id="todo5" name="todo5" ><br>
 
     <input type="submit" id="Submit" name="Submit" value="Submit">
 </form>
 </div>
-<p id="Results">Display</p>
 
     <script src="todolist.js"></script>
 </body>
